2007-02-24  Koji Arai  <arai@users.sourceforge.jp>

	* src/header.c (get_header): the variable "noconvertcase" changed
	to "convertcase".
	it means that this LHa does not convert filename case automatically.

	* src/lha.h: ditto.

	* src/lharc.c (init_variable): ditto.

	* src/lharc.c (print_tiny_usage, parse_suboption): added a long
	option "--convert-filename-case" that change to the old behavior.

	* src/lharc.c (print_usage, parse_suboption): the "g" option has
	no meaning when extracting.

	* src/header.c (write_header): no upcase filename when the generic
	archive creating.

2007-02-24  Koji Arai  <arai@users.sourceforge.jp>

	* configure.ac: updated version.

	* src/lharc.c (print_usage): updated.

2007-02-24  Koji Arai  <arai@users.sourceforge.jp>

	* src/header.c (copy_path_element, remove_dots, init_header):
	should treat "foo" and "./foo" as same file, so remove "./" from
	archived path name.

	* tests/Makefile.am, tests/lha-test.in, tests/lha-test17:
	added tests for the removing relative path.

2006-10-09  Koji Arai  <arai@users.sourceforge.jp>

	* src/lha_macro.h (MIN): newly added a macro for below.

	* maketbl.c (make_table): applied the security patch for the
	CVE-2006-4335 and CVE-2006-4337.

	* huf.c (read_pt_len, read_c_len, decode_c_st1, decode_p_st1):
	applied the security patch for the CVE-2006-4338.

2006-10-09  Koji Arai  <arai@users.sourceforge.jp>

	* tests/lha-test.in: the function local variable `$status' is treated as
	the builtin variable on the Zsh version 4.3.2, so it was renamed to
	$exit_status.

	* tests/Makefile.am, tests/lha-test.in, tests/lha-test16, tests/lha-test16-l0.lzh, tests/lha-test16-l1.lzh, tests/lha-test16-l2.lzh, tests/lha-test16-lg.lzh:
	added tests for the header CRC.

2006-10-08  Koji Arai  <arai@users.sourceforge.jp>

	* 00readme.autoconf: updated.

	* Hacking_of_LHa: changed mail address.

2006-10-08  Koji Arai  <arai@users.sourceforge.jp>

	* configure.ac: updated version.
